[package]
name = "asteroid-mq"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
flume = "0.11"
futures-util = { version = "0.3", features = ["sink"] }
machine-uid = "0.5.3"
pin-project-lite = "0.2"

# async runtime
tokio = { version = "1", features = ["full", "tracing"] }

# tracing
tracing = "0.1"

# digest
sha2 = "0.10"

# k8s cluster support
kube = { version = "0.93.1", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.22.0", features = ["latest"], optional = true }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
bincode = "1"
ciborium = { version = "0.2", optional = true }
typeshare = { version = "1" }
base64 = "0.22"

# raft
openraft = { version = "0.9.16", features = ["serde", "storage-v2"] }
# openraft = { version = "0.9.16", features = ["serde", "storage-v2"], path="../openraft/openraft" }

[features]
cluster-k8s = ["kube", "k8s-openapi"]
cbor = ["dep:ciborium"]
[dev-dependencies]
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
console-subscriber = "*"
axum = { version = "0.7", features = ["ws"] }
