[workspace]
members = ["model", "server", "sdk/rust"]
resolver = "2"
[workspace.package]
version = "0.1.0-alpha.8"
authors = ["4t145 <u4t145@163.com>", "RWDai <rwdai@foxmail.com>"]
edition = "2021"
homepage = "https://github.com/ideal-world/asteroid-mq"
documentation = "https://docs.rs/spacegate/asteroid-mq"
repository = "https://github.com/ideal-world/asteroid-mq"
license = "MIT/Apache-2.0"
rust-version = "1.80"
description = "An embeddable message queue system"
keywords = ["message-queue", "async", "tokio", "openraft"]
categories = [
    "network-programming",
    "asynchronous",
]

[workspace.dependencies]
bytes = { version = "1" }
chrono = "0.4"
flume = "0.11"
futures-util = { version = "0.3" }
machine-uid = "0.5.3"
pin-project-lite = "0.2"

# async runtime
tokio = { version = "1" }

# scheduling
tsuki-scheduler = { version = "0.1" }

# tracing
tracing = "0.1"

# digest
sha2 = "0.10"

# k8s cluster support
kube = { version = "0.93.1" }
k8s-openapi = { version = "0.22.0" }

# serialization
ciborium = { version = "0.2" }
serde = { version = "1" }
serde_json = { version = "1" }
bincode = "1"
typeshare = { version = "1" }
base64 = "0.22"

# raft
openraft = { version = "=0.9.17" }
# openraft = { version = "0.9.16", features = ["serde", "storage-v2"], path="../openraft/openraft" }


