[package]
name = "asteroid-mq-model"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
typeshare = { workspace = true }
base64.workspace = true
chrono = { workspace = true, features = ["serde"]}

# digest
sha2.workspace = true

machine-uid = "0.5.3"
