[package]
name = "asteroid-mq-model"
description = "Basic models for asteroid-mq"
version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
typeshare = { workspace = true }
base64.workspace = true
chrono = { workspace = true, features = ["serde"]}

# digest
sha2.workspace = true

machine-uid = "0.5.3"
