[package]
name = "asteroid-mq"
version = "0.1.0"
edition = "2021"
[dependencies]
asteroid-mq-model = { path = "../model" }
bytes = { workspace = true, features = ["serde"] }
chrono.workspace = true
flume.workspace = true
futures-util = { workspace = true, features = ["sink"] }
machine-uid.workspace = true
pin-project-lite.workspace = true

# async runtime
tokio = { workspace = true, features = ["full", "tracing"] }

# tracing
tracing.workspace = true

# digest
sha2.workspace = true

# k8s cluster support
kube = { workspace = true, features = ["runtime", "derive"], optional = true }
k8s-openapi = { workspace = true, features = ["latest"], optional = true }

# serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode.workspace = true
ciborium = { workspace = true, optional = true }
base64.workspace = true

# raft
openraft = { workspace = true, features = ["serde", "storage-v2"] }
tokio-util = "0.7.12"
[features]
cluster-k8s = ["kube", "k8s-openapi"]
cbor = ["dep:ciborium"]
[dev-dependencies]
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
console-subscriber = "*"
axum = { version = "0.7", features = ["ws"] }
rand = "*"