[package]
name = "asteroid-mq-sdk"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
asteroid-mq-model = { path = "../../model" }
futures-util = { workspace = true, features = ["sink"] }
tokio-tungstenite = "0.24"
tokio-util = "0.7.12"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }


[dev-dependencies]
reqwest = { version = "0.12"}
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
