[package]
name = "asteroid-mq-sdk"
description = "Rust SDK for asteroid-mq"
version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
asteroid-mq-model = { version = "0.1.0-alpha.11", path = "../../model" }
asteroid-mq = { version = "0.1.0-alpha.11", path = "../../server", optional = true }
futures-util = { workspace = true, features = ["sink"] }
tokio-tungstenite = { version = "0.24", optional = true }
tokio-util = "0.7.12"
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
pin-project-lite = { workspace = true }

[features]
default = ["ws"]
ws = ["tokio-tungstenite"]
local = ["asteroid-mq"]

[dev-dependencies]
reqwest = { version = "0.12" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
chrono = "0"
